--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revista Cienciometrik</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
@@ -35,12 +34,12 @@
 <section id="inicio" class="section">
     <div class="main-content-banner">
         <div class="image-wrapper right-image">
-            <img src="/images/PNG-Cienciometrik/cienciometrik.png" alt="Imagen en movimiento de la revista" class="animated-image-banner">
+            <img src="images/PNG-Cienciometrik/cienciometrik.png" alt="Imagen en movimiento de la revista" class="animated-image-banner">
         </div>
         <div class="image-wrapper left-image">
-            <img src="/images/Portada.png" alt="Imagen de portada de la revista" class="main-image-banner">
+            <img src="images/Portada.png" alt="Imagen de portada de la revista" class="main-image-banner">
             <br>
-            <a href="/Docs/Revista CienciometriK_Vol. 2 N°. 3 2024.pdf" download class="button_download">Último volúmen</a>
+            <a href="Docs/Revista CienciometriK_Vol. 2 N°. 3 2024.pdf" download class="button_download">Último volúmen</a>
         </div>
     </div>
 </section>
@@ -52,7 +51,7 @@
 
                 <div id="bienvenido" class="video-container">
                     <video width="100%" controls autoplay muted loop style="max-width: 500px; margin: 20px auto; display: block; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-                        <source src="/vids/vid1.mp4" type="video/mp4">
+                        <source src="vids/vid1.mp4" type="video/mp4">
                     </video>
                 </div>
             </section>
@@ -98,9 +97,9 @@
     <!-- FOOTER LLAMADO COMO OBJECTO JS DESDE FOOTER.JS -->
     <mi-footer></mi-footer>
 
-    <script src="/Objects/header.js"></script>
-    <script src="/Objects/container.js"></script>
-    <script src="/Objects/footer.js"></script>
-    <script src="/Objects/script.js"></script>
+    <script src="Objects/header.js"></script>
+    <script src="Objects/container.js"></script>
+    <script src="Objects/footer.js"></script>
+    <script src="Objects/script.js"></script>
 </body>
 </html>
