Link gen, sin admin, corregidos
Link gen, sin admin, corregidos ok

--- a/contactanos.html
+++ b/contactanos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctanos - Revista Cienciometrik</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <mi-header></mi-header>
@@ -162,9 +162,9 @@
             }
         });
     </script>
-    <script src="/Objects/header.js"></script>
-    <script src="/Objects/container.js"></script>
-    <script src="/Objects/footer.js"></script>
-    <script src="/Objects/script.js"></script>
+    <script src="Objects/header.js"></script>
+    <script src="Objects/container.js"></script>
+    <script src="Objects/footer.js"></script>
+    <script src="Objects/script.js"></script>
 </body>
 </html>
