--- a/publicaciones.html
+++ b/publicaciones.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publicaciones</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <mi-header></mi-header>
@@ -50,7 +49,7 @@
             <h3>Vol. 2 N°. 3 (Julio - Diciembre 2024)</h3>
             <p>Este volumen incluye artículos de investigación y ponencias del 1er Simposio Nacional de Cienciometría.</p>
             <div class="descarga-info">
-                <a href="/Docs/Revista_CienciometriK_1_1-3.pdf" target="_blank">Descargar PDF</a>
+                <a href="Docs/Revista CienciometriK_Vol. 2 N°. 3 2024.pdf" target="_blank">Descargar PDF</a>
                 <p>ISSN: 2981-5533</p>
             </div>
         </div>
@@ -66,7 +65,7 @@
             <h3>Vol. 2 N°. 2 (Enero - Junio 2024)</h3>
             <p>Este volumen contiene artículos sobre tecnologías e inteligencia artificial, mipymes, economía circular, inclusión y más.</p>
             <div class="descarga-info">
-                <a href="/files/volumen_2_numero_2.pdf" target="_blank">Descargar PDF</a>
+                <a href="Docs/REVISTA CIENCIOMETRIK_VOLUMEN 2 N° 2 - ENERO - JUNIO - 2024.pdf" target="_blank">Descargar PDF</a>
                 <p>ISSN: 2981-5533</p>
             </div>
         </div>
@@ -81,7 +80,7 @@
             <h3>Vol. 1 N°. 1 (Julio - Diciembre 2023)</h3>
             <p>El primer volumen de la revista con artículos de investigación y resultados del semillero ICI.</p>
             <div class="descarga-info">
-                <a href="/files/volumen_1_numero_1.pdf" target="_blank">Descargar PDF</a>
+                <a href="Docs/Revista_CienciometriK_1_1-3.pdf" target="_blank">Descargar PDF</a>
                 <p>ISSN: 2981-5533</p>
             </div>
         </div>
@@ -94,9 +93,9 @@
 
     <mi-footer></mi-footer>
 
-    <script src="/Objects/header.js"></script>
-    <script src="/Objects/container.js"></script>
-    <script src="/Objects/footer.js"></script>
-    <script src="/Objects/script.js"></script>
+    <script src="Objects/header.js"></script>
+    <script src="Objects/container.js"></script>
+    <script src="Objects/footer.js"></script>
+    <script src="Objects/script.js"></script>
 </body>
 </html>
