--- a/autores.html
+++ b/autores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autores</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     </head>
 <body>
 
@@ -63,12 +63,12 @@
                         <div id="mensaje" class="mensaje"></div>
                     </div> 
                     <div class="image-container-volumenes">
-                        <img src="/images/edicion_autores.png" alt="Imagen de edición para autores" class="image-authors">
+                        <img src="images/edicion_autores.png" alt="Imagen de edición para autores" class="image-authors">
                     </div>
                 </div> 
 
                 <div class="image-prefooter-container">
-                    <img src="/images/Studthink.png" alt="Imagen de Studthink" class="image-prefooter-centered">
+                    <img src="images/Studthink.png" alt="Imagen de Studthink" class="image-prefooter-centered">
                 </div>
 
             </section>
@@ -77,10 +77,10 @@
 
     <mi-footer></mi-footer>
 
-    <script src="/Objects/header.js"></script>
-    <script src="/Objects/container.js"></script>
-    <script src="/Objects/footer.js"></script>
-    <script src="/Objects/script.js"></script>
+    <script src="Objects/header.js"></script>
+    <script src="Objects/container.js"></script>
+    <script src="Objects/footer.js"></script>
+    <script src="Objects/script.js"></script>
 
 </body>
 </html>
