--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -4,60 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Quiénes Somos</title>
-     <link rel="stylesheet" href="/CSS/styles.css">
-     <link rel="stylesheet" href="/CSS/custom.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-     <!-- <style>
-         /* Estilos para el desplazamiento suave y el panel */
-         html {
-             scroll-behavior: smooth; /* Desplazamiento suave para toda la página */
-         }
-
-         .container {
-             display: flex;
-             margin: 20px;
-         }
-
-         .sidebar {
-             position: sticky;
-             top: 20px;
-             width: 250px;
-             height: fit-content;
-             border: 1px solid #ccc;
-             padding: 10px;
-             margin-right: 20px;
-         }
-
-         .sidebar h3 {
-             margin-top: 0;
-         }
-
-         .sidebar nav ul {
-             list-style: none;
-             padding: 0;
-         }
-
-         .sidebar nav ul li {
-             padding: 5px 0;
-         }
-
-         .sidebar nav ul li a {
-             text-decoration: none;
-             color: #333;
-         }
-
-         .main-content {
-             flex: 1;
-         }
-
-         .section {
-             margin-bottom: 50px;
-             padding-top: 50px;
-             border-top: 1px solid #eee;
-         }
-
-         /* Estilos adicionales  */
-     </style> -->
+     <link rel="stylesheet" href="CSS/styles.css">
  </head>
  <body>
 
@@ -160,29 +107,10 @@
 
      <mi-footer></mi-footer>
 
-     <script src="/Objects/header.js"></script>
-     <script src="/Objects/container.js"></script>
-     <script src="/Objects/footer.js"></script>
-     <script src="/Objects/script.js"></script>
-
-     <script>
-         /* Opcional: JavaScript para un control más fino (si el CSS no es suficiente) */
-         /*
-         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-             anchor.addEventListener('click', function (e) {
-                 e.preventDefault();
-
-                 const target = document.querySelector(this.getAttribute('href'));
-                 if (target) {
-                     target.scrollIntoView({
-                         behavior: 'smooth',
-                         block: 'start'
-                     });
-                 }
-             });
-         });
-         */
-     </script>
+     <script src="Objects/header.js"></script>
+     <script src="Objects/container.js"></script>
+     <script src="Objects/footer.js"></script>
+     <script src="Objects/script.js"></script>
 
  </body>
  </html>
