--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cienciométrik - Área de Autores SENA</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="autor_panel.css"> </head>
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="autor_panel.css"> 
+</head>
 <body>
     <mi-header></mi-header>
 
@@ -48,7 +48,7 @@
 
             <section id="subir-articulo" class="section article-form">
                 <h2>Subir Nuevo Artículo</h2>
-                <form id="uploadArticleForm" action="/admin_center/revisor.html" method="POST">
+                <form id="uploadArticleForm" action="admin_center/revisor.html" method="POST">
                     <div class="input-group">
                         <label for="tituloArticulo">Título del Artículo</label>
                         <input type="text" id="tituloArticulo" name="tituloArticulo" placeholder="Ingrese el título completo del artículo" required>
@@ -150,9 +150,9 @@
 
     <mi-footer></mi-footer>
 
-    <script src="/Objects/header.js"></script>
+    <script src="header.js"></script>
     <script src="/Objects/container.js"></script>
-    <script src="/Objects/footer.js"></script>
+    <script src="footer.js"></script>
     <script src="/Objects/script.js"></script>
     <script>
         // Script para el enlace de cerrar sesión en el sidebar
