--- a/admin_cemter/admin.html
+++ b/admin_cemter/admin.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cienciométrik - Panel de Administración</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="stylesheet" href="admin.css">
 </head>
 <body>
@@ -395,9 +394,9 @@
 
     <mi-footer></mi-footer>
 
-    <script src="/Objects/header.js"></script>
+    <script src="header_admin.js"></script>
     <script src="/Objects/container.js"></script>
-    <script src="/Objects/footer.js"></script>
+    <script src="footer_admin.js"></script>
     <script src="/Objects/script.js"></script>
     <script>
         // Función para mostrar/ocultar secciones
