--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -150,9 +150,9 @@
 
     <mi-footer></mi-footer>
 
-    <script src="header.js"></script>
+    <script src="header_admin.js"></script>
     <script src="/Objects/container.js"></script>
-    <script src="footer.js"></script>
+    <script src="footer_admin.js"></script>
     <script src="/Objects/script.js"></script>
     <script>
         // Script para el enlace de cerrar sesión en el sidebar
