--- a/admin_cemter/revisor.html
+++ b/admin_cemter/revisor.html
@@ -304,3 +304,6 @@
 
 </body>
 </html>
+
+<link rel="stylesheet" href="Logo SENA blanco.png">
+<link rel="stylesheet" href="Logo cienciometrik blanco.png">
