--- a/admin_cemter/revisor.html
+++ b/admin_cemter/revisor.html
@@ -23,13 +23,12 @@
                         <i class="fas fa-check-double"></i>
                         <a href="#articulos-revisados" class="sidebar-link">Historial de Artículos Revisados</a>
                     </li>
+                    <li>
+                        <i class="fas fa-sign-out-alt"></i>
+                        <a href="../index.html" class="logout-link">Cerrar Sesión</a>
+                    </li>
                     </ul>
             </nav>
-            <div class="sidebar-bottom">
-                <a href="#" class="logout-link">
-                    <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
-                </a>
-            </div>
         </aside>
 
         <main class="main-content">
