--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- PANEL DE NAVEGACIÓN -->
     <div class="container">
-        <aside class="sidebar">
+        <aside class="sidebar" id="nav_panel">
             <h3>Panel de Navegación</h3>
             <nav>
                 <ul>
@@ -34,61 +34,61 @@
 <section id="inicio" class="section">
     <div class="main-content-banner">
         <div class="image-wrapper right-image">
-            <img src="images/PNG-Cienciometrik/cienciometrik.png" alt="Imagen en movimiento de la revista" class="animated-image-banner">
+            <img src="images/PNG-Cienciometrik/cienciometrik.png" id="img_moving" class="animated-image-banner">
         </div>
         <div class="image-wrapper left-image">
-            <img src="images/Portada.png" alt="Imagen de portada de la revista" class="main-image-banner">
+            <img src="images/Portada.png" id="portada_imagen" alt="Imagen de portada de la revista" class="main-image-banner">
             <br>
-            <a href="Docs/Revista CienciometriK_Vol. 2 N°. 3 2024.pdf" download class="button_download">Último volúmen</a>
+            <a href="Docs/Revista CienciometriK_Vol. 2 N°. 3 2024.pdf" id="volumen_revista" download class="button_download">Último volúmen</a>
         </div>
     </div>
 </section>
             
-            <section id="inicio" class="section">
-                <h2>Bienvenido a la Revista Cienciometrik</h2>
+            <section id="inicio_bienvenido" class="section">
+                <h2 id="titulo_inicio">Bienvenido a la Revista Cienciometrik</h2>
                 
-                <p>Un espacio para la difusión del conocimiento científico y tecnológico del Sistema SENNOVA.</p>
+                <p id="párrafo_inicio">Un espacio para la difusión del conocimiento científico y tecnológico del Sistema SENNOVA.</p>
 
-                <div id="bienvenido" class="video-container">
+                <div id="bienvenido_video" class="video-container">
                     <video width="100%" controls autoplay muted loop style="max-width: 500px; margin: 20px auto; display: block; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-                        <source src="vids/vid1.mp4" type="video/mp4">
+                        <source src="vids/vid1.mp4" type="video/mp4" id="video_index">
                     </video>
                 </div>
             </section>
 
             <section id="historia" class="section">
-                <h2>Historia de la Revista</h2>
-                <p>La Revista Cienciometrik es una publicación semestral del Servicio Nacional de Aprendizaje SENA, específicamente del Centro de Comercio, Regional Antioquia, adscrita al Sistema de Investigación, Desarrollo Tecnológico e Innovación SENNOVA.</p>
-                <h3>Convocatorias:</h3>
-                <ul>
-                    <li><strong>Vol. 1 N°. 1 (Julio - Diciembre 2023):</strong> Convocatoria general para artículos de investigación.</li>
-                    <li><strong>Vol. 2 N°. 2 (Enero - Junio 2024):</strong> Convocatoria general para artículos de investigación.</li>
-                    <li><strong>Vol. 2 N°. 3 (Julio - Diciembre 2024):</strong> Convocatoria general para artículos de investigación.</li>
-                    <li><strong>1er Simposio Nacional de Cienciometría (Julio - Diciembre 2024):</strong> Convocatoria especial para ponencias y trabajos relacionados con herramientas de cienciometría.</li>
+                <h2 id="titulo_historia">Historia de la Revista</h2>
+                <p id="párrafo_historia">La Revista Cienciometrik es una publicación semestral del Servicio Nacional de Aprendizaje SENA, específicamente del Centro de Comercio, Regional Antioquia, adscrita al Sistema de Investigación, Desarrollo Tecnológico e Innovación SENNOVA.</p>
+                <h3 id="convocatorias">Convocatorias:</h3>
+                <ul id="convocatorias_cont">
+                    <li id="conv1"><strong>Vol. 1 N°. 1 (Julio - Diciembre 2023):</strong> Convocatoria general para artículos de investigación.</li>
+                    <li id="conv2"><strong>Vol. 2 N°. 2 (Enero - Junio 2024):</strong> Convocatoria general para artículos de investigación.</li>
+                    <li id="conv3"><strong>Vol. 2 N°. 3 (Julio - Diciembre 2024):</strong> Convocatoria general para artículos de investigación.</li>
+                    <li id="conv4"><strong>1er Simposio Nacional de Cienciometría (Julio - Diciembre 2024):</strong> Convocatoria especial para ponencias y trabajos relacionados con herramientas de cienciometría.</li>
                 </ul>
             </section>
 
             <section id="linea-tiempo" class="section">
                 <h2>Línea de Tiempo de la Revista</h2>
                 <ul>
-                    <li><strong>Julio - Diciembre 2023:</strong> Publicación del Vol. 1 N°. 1.</li>
-                    <li><strong>Enero - Junio 2024:</strong> Publicación del Vol. 2 N°. 2.</li>
-                    <li><strong>Julio - Diciembre 2024:</strong> Publicación del Vol. 2 N°. 3 y realización del 1er Simposio Nacional de Cienciometría.</li>
+                    <li id="l1"><strong>Julio - Diciembre 2023:</strong> Publicación del Vol. 1 N°. 1.</li>
+                    <li id="l2"><strong>Enero - Junio 2024:</strong> Publicación del Vol. 2 N°. 2.</li>
+                    <li id="l3"><strong>Julio - Diciembre 2024:</strong> Publicación del Vol. 2 N°. 3 y realización del 1er Simposio Nacional de Cienciometría.</li>
                 </ul>
             </section>
 
             <section id="enfoque" class="section">
-                <h2>Enfoque de la Revista</h2>
-                <p>La Revista Cienciometrik se enfoca en la difusión de investigaciones, desarrollos tecnológicos e innovaciones en diversas áreas del conocimiento, con un interés particular en la cienciometría como herramienta para el análisis y la mejora de la investigación.</p>
-                <h3>Líneas que recibe la revista (ejemplos basados en los documentos):</h3>
+                <h2 id="titulo_enfoque">Enfoque de la Revista</h2>
+                <p id="parrafo_enfoque">La Revista Cienciometrik se enfoca en la difusión de investigaciones, desarrollos tecnológicos e innovaciones en diversas áreas del conocimiento, con un interés particular en la cienciometría como herramienta para el análisis y la mejora de la investigación.</p>
+                <h3 id="p_enfoque">Líneas que recibe la revista (ejemplos basados en los documentos):</h3>
                 <ul>
-                    <li>Cienciometría y estudios métricos de la información.</li>
-                    <li>Investigación pedagógica.</li>
-                    <li>Desarrollo de habilidades blandas y competencias socioemocionales.</li>
-                    <li>Gestión de la producción y optimización de procesos industriales.</li>
-                    <li>Innovación y desarrollo tecnológico aplicado.</li>
-                    <li>Economía verde, territorio y sustentabilidad.</li>
-                    <li>Administración, comercio y servicios.</li>
+                    <li id="#1">Cienciometría y estudios métricos de la información.</li>
+                    <li id="#2">Investigación pedagógica.</li>
+                    <li id="#3">Desarrollo de habilidades blandas y competencias socioemocionales.</li>
+                    <li id="#4">Gestión de la producción y optimización de procesos industriales.</li>
+                    <li id="#5">Innovación y desarrollo tecnológico aplicado.</li>
+                    <li id="#6">Economía verde, territorio y sustentabilidad.</li>
+                    <li id="#7">Administración, comercio y servicios.</li>
                 </ul>
             </section>
         </main>
@@ -101,5 +101,7 @@
     <script src="Objects/container.js"></script>
     <script src="Objects/footer.js"></script>
     <script src="Objects/script.js"></script>
+    <script src="js/contentloader.js"></script>
+    <script src="js/admin_edit_index.js"></script>
 </body>
 </html>
