admin en proceso de backend
admin en proceso de backend

--- a/admin_cemter/admin.html
+++ b/admin_cemter/admin.html
@@ -63,7 +63,7 @@
                         <option value="">Todos los autores</option>
                         <option value="Juan Perez">Juan Pérez</option>
                         <option value="Ana Gomez">Ana Gómez</option>
-                        </select>
+                    </select>
                 </div>
 
                 <div class="table-responsive">
@@ -84,7 +84,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            </tbody>
+                        </tbody>
                     </table>
                 </div>
             </section>
@@ -107,7 +107,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            </tbody>
+                        </tbody>
                     </table>
                 </div>
             </section>
@@ -130,11 +130,10 @@
                             </tr>
                         </thead>
                         <tbody id="contactMessagesTableBody">
-                            <tr><td colspan="8">Cargando mensajes...</td></tr>
-                        </tbody>
+                            </tbody>
                     </table>
                 </div>
-                </section>
+            </section>
 
             <section id="envio-mensajes-admin" class="section hidden admin-form-section">
                 <h2>Enviar Mensajes a Autores / General</h2>
@@ -187,7 +186,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            </tbody>
+                        </tbody>
                     </table>
                 </div>
             </section>
@@ -207,7 +206,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            </tbody>
+                        </tbody>
                     </table>
                 </div>
             </section>
@@ -234,6 +233,7 @@
     <script src="/Objects/container.js" type="module"></script>
     <script src="footer_admin.js" type="module"></script>
     <script src="/Objects/script.js" type="module"></script>
+    <script src="admin_messages.js" type="module"></script>
 
-    </body>
+</body>
 </html>
