Autores admin backend
ok

--- a/autores.html
+++ b/autores.html
@@ -28,8 +28,8 @@
             <section class="section contact-hero">
                 <div class="contact-hero-content">
                     <i class="fas fa-paper-plane contact-icon"></i>
-                    <h2>¡Post de nuestra revista!</h2>
-                    <p class="subtitle">¿Tienes un post para la revista? <br> ¡Escribenos!</p>
+                    <h2>¡Post para nuestra revista!</h2>
+                    <p class="subtitle">¿Tienes un artículo para Cienciométrik? <br> ¡Escribenos!</p>
                 </div>
             </section>
 
@@ -48,7 +48,7 @@
                         <br><br>
                         <h3>¡Visita tu sitio web para Autores!</h3>
                         <br>
-                        <p>¡Si tienes ideas de postulaciones para la misma, visita este sitio web donde podrás enviarla, espera la respuesta del área de revisión y a ver tu artículo en la Revista Cienciometrik!</p>
+                        <p>¡Si tienes ideas de postulaciones para Cienciométrik, ingresa a la web Autores, escribe tu artículo, espera la respuesta del área de revisión y verás tu artículo en la Revista Cienciometrik!</p>
                         
                         <a href="login/login.html" class="button calm-button">
                             Autores Login
