Backend ok en los 3
Backend ok en los 3

--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autores - Revista Cienciometrik</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="stylesheet" href="autores.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="autor_panel.css">
 </head>
 <body>
     <mi-header></mi-header>
@@ -16,11 +14,6 @@
             <h3>Panel de Autor</h3>
             <nav>
                 <ul>
-                    <li><a href="../index.html"><i class="fas fa-home"></i> Inicio</a></li>
-                    <li><a href="../quienes_somos.html"><i class="fas fa-info-circle"></i> Quiénes Somos</a></li>
-                    <li><a href="../publicaciones.html"><i class="fas fa-book-open"></i> Publicaciones</a></li>
-                    <li><a href="../autores.html"><i class="fas fa-pen-nib"></i> Autores</a></li>
-                    <li><a href="../contactanos.html"><i class="fas fa-address-book"></i> Contáctanos</a></li>
                     <li><a href="#enviar-articulo"><i class="fas fa-paper-plane"></i> Enviar Artículo</a></li>
                     <li><a href="#mis-articulos"><i class="fas fa-file-alt"></i> Mis Artículos</a></li>
                     <li><a href="#observaciones"><i class="fas fa-comment-dots"></i> Observaciones</a></li>
