--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li>
                         <a href="#inicio">Inicio</a>
                     </li>
-                    <li><a href="#bienvenido">Bienvenido</a></li>
+                    <li><a href="#titulo_inicio">Bienvenido</a></li>
                     <li><a href="#historia">Historia de la Revista</a></li>
                     <li><a href="#linea-tiempo">Línea de Tiempo</a></li>
                     <li><a href="#enfoque">Enfoque</a></li>
